--- a/main.cfg
+++ b/main.cfg
@@ -2,3 +2,6 @@
 
 # Time taken between random inputs (ex: 0.9, when converted: 0.1)
 Interval: 1
+
+# Timer used before program starts pressing keys
+Timer: 5
